<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modificar">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-41dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_name"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="11dp"
                android:text="@string/txt_documento"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_name" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="11dp"
                android:text="@string/txt_apto"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_id" />

            <EditText
                android:id="@+id/txt_apto"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="11dp"
                android:text="@string/txt_tipo"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_apto" />

            <Button
                android:id="@+id/btn_modificar"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="31dp"
                android:text="@string/btn_modificar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/txt_id"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="338dp"
                android:layout_height="96dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.438"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="MissingConstraints" >

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Familia"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Amigos"/>

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Domicilio"/>
            </RadioGroup>

            <!--<EditText
                android:id="@+id/txt_tipo"
                android:layout_width="345dp"
                android:layout_height="44dp"
                android:layout_marginTop="11dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>