<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"

    >


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginTop="0dp"
        android:text="@string/txt_name"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/edtNombree"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:hint="Ingresa el nombre"
        android:inputType="textCapSentences"
        android:layout_marginLeft="10dp"/>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_documento"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:id="@+id/edtIdd"
        android:inputType="phone"
        android:hint="Ingresa la identificacion"
        android:layout_marginLeft="10dp"/>



    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_apto"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:id="@+id/edtApartamentoo"
        android:hint="Ingresa numero del apartamento"
        android:layout_marginLeft="10dp"/>





    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/fecha_ingreso"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="FECHA DE INGRESO"
        android:layout_marginLeft="10dp"
        android:textSize="18sp" />

    <EditText
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:id="@+id/edtFechaa"
        android:hint="Ingresa la fecha"
        android:layout_marginLeft="10dp"
        android:inputType="date"
        android:clickable="true"
        android:focusable="false"/>




    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />


    <TextView
        android:id="@+id/hora_ingreso"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:text="HORA DE INGRESO"
        android:textSize="18sp" />

    <EditText
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:id="@+id/edtHoraa"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="Ingresa la hora"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="345dp"
        android:layout_height="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="10dp"
        android:text="@string/txt_tipo"
        android:textSize="18sp"
        />

    <RadioGroup
        android:id="@+id/radioGroupp"
        android:layout_width="338dp"
        android:layout_height="96dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        >

        <RadioButton
            android:id="@+id/radioButtonn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Familia"
            />

        <RadioButton
            android:id="@+id/radioButtonn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Amigos"
            />

        <RadioButton
            android:id="@+id/radioButtonn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Domicilio"
            />
    </RadioGroup>


    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginTop="31dp"
        android:text="Actualizar"
        android:layout_marginLeft="10dp"
         />

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="345dp"
        android:layout_height="44dp"
        android:layout_marginTop="11dp"
        android:text="Ver lista"
        android:layout_marginLeft="10dp"
         />


</LinearLayout>